TO DO
 * add script to automatically run all pipeline steps on multiple samples
 * followup on MicrobeCensus crashing issue
 * determine ideal word size for sensitive search
 * determine ideal alignment coverage (currently at 0.75)
 * determine if sensitive settings chage the % unclassified in real datasets

IN PROGRESS

CHANGES

2015-10-27
 * switched to distutils in setup.py; this fixed an install bug
 * fixed max_mem_usage() so that it works on OSX
 * moved various utility functions used by multiple scripts to misc.py
 * binaries are checked for executablility

2015-10-26
 * added --retry to download_ref_db.py

2015-10-25
 * fixed path to reference database. now path is relative to /scripts directory. path added to args from run_phylo_cnv.py
 * operating system now checked from run_phylo_cnv.py
 * switch to curl for downloading ref_db
 * added gene_id to annotate_snps.py

2015-10-24
 * added pairwise_distances.py

2015-10-21
 * run_phylo_cnv.py: args['out'] created if not exists, args['all'] default, args['gc_cov'] == 3.0 default

2015-10-08
 * added annotate_snps.py
 * merge_snps.py: made more modular

2015-10-06
 * snvs.py: fixed path to filter_bam.py
 * added download_ref_db.py for easily downloading reference database
 * changed path to reference databases; remove -D as option

2015-09-17
 * renamed pangenome.py to cnvs.py
 * run_phylo_cnv.py: removed option '--cluster_pid'
 * run_phylo_cnv.py: fixed minor bug when parsing '--gc_id'
 * cnvs.py: no longer aggregating gene coverage
 * merge_genes.py: added option '--cluster_pid'
 * merge_genes.py: fixed option '--sample_list'
 * merge_genes.py: added reference genome profiles
 * run_phylo_cnv.py: added option '--remove_tmp'
 * snvs.py, cnvs.py: added support for '--remove' option

2015-09-08
 * fq_to_fa.py: no longer filtering reads with leading 'N'
 * updated binaries: bin/Linux/hs-blastn and bin/Darwin/hs-blastn 
   -reads from /dev/stdin without error
   -reads sequences composed of all Ns without error