@@ -57,6 +57,9 @@ Read/base filters:
 Run using defaults:  
 `run_phylo_cnv.py snvs -1 sample_1.fq.gz -p sample_1.species -o snvs/sample_1`
 
+Paired-end reads:
+`run_phylo_cnv.py snvs -1 sample_1.forward.fq.gz -2 sample_1.reverse.fq.gz -p sample_1.species -o snvs/sample_1`
+
 ## Output
 
 The output of this script is a directory with the following files:  
