@@ -2,7 +2,7 @@
 
 This step-by-step tutorial will walk you through downloading, installing, and running PhyloCNV
 
-### Download and installation
+## Download and installation
 PhyloCNV is written in Python and runs on Linux and OSX  
 [read more...] (https://github.com/snayfach/PhyloCNV/blob/master/docs/requires.md)  
 
@@ -15,19 +15,43 @@ Download the reference database:
 `python PhyloCNV/scripts/download_ref_db.py`   
 [read more...] (https://github.com/snayfach/PhyloCNV/blob/master/docs/ref_db.md)  
 
-### Run PhyloCNV
+## Run PhyloCNV
 
-The following directions assume that PhyloCNV/scripts has already been added to your PATH  
-Move to the example directory: `cd PhyloCNV/example`  
+The following directions assume that PhyloCNV/scripts has been added to your PATH  
 
-**Profile species abundances in each metagenome**  
-`run_phylo_cnv.py species -1 sample_1.fq.gz -o sample_1.species --verbose`  
-`run_phylo_cnv.py species -1 sample_2.fq.gz -o sample_2.species --verbose`  
+More information can be obtained for any of the scripts  using the `-h` flag
+
+Move to the example directory:  
+`cd PhyloCNV/example`  
+
+####Profile species abundances
+
+Create a directory to store species abundance files:  
+`mkdir species`
+
+For each sample, run:  
+`run_phylo_cnv.py species -1 sample_1.fq.gz -o species/sample_1.species --verbose`  
+`run_phylo_cnv.py species -1 sample_2.fq.gz -o species/sample_2.species --verbose`  
 
 * This enables automatically profiling strain-level variation of all ~6,000 species in downstream modules.  
+* Output file names (-o) should have the format \<sample_id>.species
 * [read more...] (https://github.com/snayfach/PhyloCNV/blob/master/docs/species.md)
 
-**Profile strain-level gene content of all abundant species**   
+Merge results across samples:  
+`merge_species.py -i species -o test`  
+
+* `-i` is the directory containing \<sample_id>.species files
+* `-o` is the basename for output files:
+  * \<basename>.species_prevalence
+  * \<basename>.species_abundance
+  * \<basename>.species_coverage
+* [read more...] (https://github.com/snayfach/PhyloCNV/blob/master/docs/merge_species.md)
+
+####Profile strain-level gene content of abundant species 
+
+Create a directory to store output files:  
+`mkdir cnvs`
+
 For each sample, run:   
 `run_phylo_cnv.py genes -1 sample_1.fq.gz -p sample_1.species -o cnvs/sample_1  --verbose`  
 `run_phylo_cnv.py genes -1 sample_2.fq.gz -p sample_2.species -o cnvs/sample_2  --verbose`   
@@ -45,7 +69,7 @@ Merge results for each species across samples:
 * The main output, stored in the directory 'Bacteroides_vulgatus', is a gene presence/absence matrix  
 * [read more...] (https://github.com/snayfach/PhyloCNV/blob/master/docs/merge_cnvs.md)
 
-**Profile strain-level nucleotide variants of abundant species**  
+####Profile strain-level nucleotide variants of abundant species  
 For each sample, run:  
 `run_phylo_cnv.py snvs -1 sample_1.fq.gz -p sample_1.species -o snvs/sample_1`  
 `run_phylo_cnv.py snvs -1 sample_2.fq.gz -p sample_2.species -o snvs/sample_2`  
@@ -66,7 +90,7 @@ Merge results for each species across samples:
 * [read more...] (https://github.com/snayfach/PhyloCNV/blob/master/docs/merge_snvs.md)
 
 
-### Next steps
+## Next steps
 [Functionally annotate CNVs] (https://github.com/snayfach/PhyloCNV/blob/master/docs/annotate_cnvs.md)  
 [Functionally annotate SNVs] (https://github.com/snayfach/PhyloCNV/blob/master/docs/annotate_snvs.md)  
 [Estimate gene-content distance between metagenomes] (https://github.com/snayfach/PhyloCNV/blob/master/docs/pairwise_distances.md)  
